# rubin-protocol

./: .codacy.yaml  .codacy.yml  .coderabbit.yaml  .env.example  .eslintrc.json  .gitattributes  .gitignore  .jscpd.json  AGENTS.md  ARCHITECTURE_MAP.md  CLAUDE.md  CODACY_CCN_SUMMARY.md  CODEOWNERS  IMPLEMENTATION_ROADMAP.md  INBOX.md  POLICY_CORE_EXT_PREACTIVATION.md  POLICY_DA_ANCHOR_ANTI_ABUSE.md  POLICY_MEMPOOL_ADMISSION_GENESIS.md  POLICY_P2P_TRANSPORT_HARDENING.md  POLICY_STRUCTURED_LOGGING_MINIMUM.md  QUEUE.md  QWEN.md  README.md  RUBIN_CORE_EXT_CONFORMANCE_EVIDENCE.md  RUBIN_CORE_EXT_SYNTHETIC_CONFORMANCE_TZ.md  RUBIN_PARALLEL_VALIDATION_AGENT_TZ.md  RUBIN_PARALLEL_VALIDATION_BENCHMARK_PLAN.md  RUBIN_PARALLEL_VALIDATION_FIXTURES.md  RUBIN_PARALLEL_VALIDATION_IMPLEMENTATION_PLAN.md  RUBIN_PARALLEL_VALIDATION_OPERATOR_RUNBOOK.md  RUBIN_PARALLEL_VALIDATION_PROMOTION_GATES.md  RUBIN_PARALLEL_VALIDATION_PR_REVIEW_TEMPLATE.md  RUBIN_PARALLEL_VALIDATION_SECURITY_NOTES.md  RUBIN_PARALLEL_VALIDATION_SECURITY_REVIEW_TEMPLATE.md  RUBIN_PARALLEL_VALIDATION_SHADOW_MODE.md  RUBIN_PROTOCOL_v1.0_MASTER_COMPLETE_MONOLITH.md  SPEC.md  SPEC_LOCATION.md  eslint.config.mjs  package-lock.json  (+3 more)
.circleci/: config.yml
.claude/: settings.json
clients/rust/: Cargo.toml
clients/rust/crates/rubin-consensus/: Cargo.toml
clients/rust/crates/rubin-consensus-cli/: Cargo.toml
clients/rust/crates/rubin-consensus-cli/src/: main.rs  txctx_governance.rs  txctx_harness.rs
clients/rust/crates/rubin-consensus-cli/tests/: retired_ops.rs
clients/rust/crates/rubin-consensus/benches/: bench_support.rs  combined_load.rs  connect_block_parallel.rs  sig_cache.rs
clients/rust/crates/rubin-consensus/src/: block.rs  block_basic.rs  chainstate_hash.rs  compact_relay.rs  compact_relay_tests.rs  compactsize.rs  connect_block_inmem.rs  connect_block_inmem_digest_tests.rs  constants.rs  core_ext.rs  covenant_genesis.rs  coverage_hotspots_tests.rs  da_verify_parallel.rs  encode.rs  error.rs  ext.rs  ext_tests.rs  featurebits.rs  featurebits_tests.rs  flagday.rs  fork_choice.rs  hash.rs  htlc.rs  lib.rs  live_binding_policy.rs  live_binding_policy_v1_embedded.json  merkle.rs  parse.rs  pow.rs  precompute.rs  sig_cache.rs  sig_queue.rs  sig_queue_batch_tests.rs  sig_queue_budget_tests.rs  sig_queue_deferred_spend_tests.rs  sig_queue_htlc_tests.rs  sig_queue_p2pk_stealth_tests.rs  sig_queue_queue_tests.rs  sig_queue_test_support.rs  sig_queue_threshold_tests.rs  (+23 more)
clients/rust/crates/rubin-consensus/src/block_basic/: coinbase.rs  da_set.rs  header.rs  orchestration.rs  parser.rs  txs.rs  weight.rs
clients/rust/crates/rubin-consensus/src/spend_verify_tests/: key_sig.rs  key_sig.rs.inc  mod.rs  p2pk.rs  p2pk.rs.inc  registry.rs  registry.rs.inc  threshold.rs  threshold.rs.inc
clients/rust/crates/rubin-consensus/src/tests/: block_basic.rs  connect_block_inmem.rs  connect_block_parallel.rs  connect_block_parallel_branches.rs  connect_block_parallel_conformance.rs  connect_block_parallel_integration.rs  covenant_genesis.rs  da_verify_parallel.rs  live_binding_policy.rs  mod.rs  parse_dedup.rs  precompute.rs  simplicity_covenant.rs  simplicity_txcontext.rs  suite_registry.rs  tx_parse.rs  tx_validate_worker.rs  txcontext.rs  utxo_apply.rs  worker_pool.rs
clients/rust/crates/rubin-consensus/src/tx_helpers_tests/: marshal.rs.inc  mod.rs  signing.rs.inc
clients/rust/crates/rubin-consensus/src/verify_sig_openssl/: alg.rs  binding.rs  bootstrap.rs  digest.rs  ffi.rs  keypair.rs  mod.rs
clients/rust/crates/rubin-consensus/tests/: block_basic_fuzz.rs  block_txcount_no_overalloc.rs  compact_relay_fuzz.rs  compactsize_direct.rs  connect_block_inmem_fuzz.rs  core_ext_fuzz.rs  core_ext_governance_fuzz.rs  covenant_genesis_fuzz.rs  error_mapping.rs  htlc_direct.rs  rotation_descriptor_direct.rs  simplicity_api.rs  stealth_fuzz.rs  utxo_basic_fuzz.rs  utxo_snapshot_fuzz.rs  vault_multisig.rs  wire_read_fuzz.rs
clients/rust/crates/rubin-crypto/: Cargo.toml
clients/rust/crates/rubin-crypto/src/: lib.rs  wolfcrypt_dylib.rs
clients/rust/crates/rubin-node/: Cargo.toml
clients/rust/crates/rubin-node/benches/: bench_support.rs  runtime_baseline.rs
clients/rust/crates/rubin-node/src/: aeskw.rs  blockstore.rs  chainstate.rs  chainstate_recovery.rs  coinbase.rs  da_prefetch.rs  da_relay.rs  da_txgen.rs  devnet_rpc.rs  genesis.rs  io_utils.rs  keymgr.rs  lib.rs  main.rs  miner.rs  p2p_runtime.rs  p2p_service.rs  production_rotation_schedule.rs  relay_pool.rs  sync.rs  sync_disconnect.rs  sync_reorg.rs  test_helpers.rs  tx_relay.rs  tx_seen.rs  txpool.rs  undo.rs
clients/rust/crates/rubin-node/src/interop/: mod.rs
clients/rust/crates/rubin-node/tests/: runtime_perf_guardrails.rs
clients/rust/crates/rubin-p2p/: Cargo.toml
clients/rust/crates/rubin-p2p/src/: compactblock.rs  compactsize.rs  envelope.rs  handshake.rs  lib.rs  main.rs  reject.rs  version.rs
clients/rust/crates/rubin-store/: Cargo.toml
clients/rust/crates/rubin-store/src/: db.rs  keys.rs  lib.rs  manifest.rs  pipeline.rs  reorg.rs  utxo_hash.rs
clients/rust/fuzz/: .gitignore  Cargo.toml
clients/rust/fuzz/fuzz_targets/: biguint_roundtrip.rs  block_header_surface.rs  block_subsidy.rs  compact_shortid.rs  compactsize.rs  connect_block_inmem.rs  connect_block_parallel_determinism.rs  connect_block_parallel_worker_parity.rs  covenant_genesis.rs  da_chunk_hash_verify.rs  da_payload_commit_verify.rs  featurebits_state.rs  flagday_helpers.rs  fork_work.rs  marshal_tx_roundtrip.rs  merkle_determinism.rs  p2p_version_payload.rs  p2p_wire_message.rs  parse_block_bytes.rs  parse_htlc.rs  parse_multisig.rs  parse_tx.rs  parse_tx_determinism.rs  parse_vault.rs  pow_check.rs  retarget_no_panic.rs  sig_cache_concurrent.rs  sig_cache_structural.rs  sig_verify_openssl.rs  sighash.rs  spend_dispatch_structural.rs  suite_registry_surface.rs  tx_dep_graph.rs  tx_relay_announce.rs  tx_relay_receive.rs  txcontext_bundle.rs  validate_block_basic.rs  validate_tx_local.rs
crypto/wolfcrypt/shim/: CMakeLists.txt  README.md  build_wolfcrypt_shim.sh  rubin_wc_shim.c  test_keywrap.c
(+1113 files in other folders)
