[package]
name = "rubin-consensus-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rubin-consensus = { path = "../crates/rubin-consensus" }
num-bigint = "0.4"
num-traits = "0.2"

[[bin]]
name = "parse_tx"
path = "fuzz_targets/parse_tx.rs"
test = false
doc = false

[[bin]]
name = "parse_block_bytes"
path = "fuzz_targets/parse_block_bytes.rs"
test = false
doc = false

[[bin]]
name = "compactsize"
path = "fuzz_targets/compactsize.rs"
test = false
doc = false

[[bin]]
name = "merkle_determinism"
path = "fuzz_targets/merkle_determinism.rs"
test = false
doc = false

[[bin]]
name = "retarget_no_panic"
path = "fuzz_targets/retarget_no_panic.rs"
test = false
doc = false

[[bin]]
name = "biguint_roundtrip"
path = "fuzz_targets/biguint_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "sighash"
path = "fuzz_targets/sighash.rs"
test = false
doc = false

[[bin]]
name = "validate_block_basic"
path = "fuzz_targets/validate_block_basic.rs"
test = false
doc = false

[[bin]]
name = "pow_check"
path = "fuzz_targets/pow_check.rs"
test = false
doc = false

[[bin]]
name = "compact_shortid"
path = "fuzz_targets/compact_shortid.rs"
test = false
doc = false

[[bin]]
name = "parse_htlc"
path = "fuzz_targets/parse_htlc.rs"
test = false
doc = false

[[bin]]
name = "parse_vault"
path = "fuzz_targets/parse_vault.rs"
test = false
doc = false

[[bin]]
name = "parse_multisig"
path = "fuzz_targets/parse_multisig.rs"
test = false
doc = false

[[bin]]
name = "fork_work"
path = "fuzz_targets/fork_work.rs"
test = false
doc = false

[[bin]]
name = "block_subsidy"
path = "fuzz_targets/block_subsidy.rs"
test = false
doc = false

[[bin]]
name = "covenant_genesis"
path = "fuzz_targets/covenant_genesis.rs"
test = false
doc = false
