[package]
name = "rubin-consensus-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rubin-consensus = { path = "../crates/rubin-consensus" }
sha3 = "0.10"
rubin-node = { path = "../crates/rubin-node" }
num-bigint = "0.4"
num-traits = "0.2"

[[bin]]
name = "parse_tx"
path = "fuzz_targets/parse_tx.rs"
test = false
doc = false

[[bin]]
name = "parse_tx_determinism"
path = "fuzz_targets/parse_tx_determinism.rs"
test = false
doc = false

[[bin]]
name = "parse_block_bytes"
path = "fuzz_targets/parse_block_bytes.rs"
test = false
doc = false

[[bin]]
name = "block_header_surface"
path = "fuzz_targets/block_header_surface.rs"
test = false
doc = false

[[bin]]
name = "compactsize"
path = "fuzz_targets/compactsize.rs"
test = false
doc = false

[[bin]]
name = "merkle_determinism"
path = "fuzz_targets/merkle_determinism.rs"
test = false
doc = false

[[bin]]
name = "retarget_no_panic"
path = "fuzz_targets/retarget_no_panic.rs"
test = false
doc = false

[[bin]]
name = "biguint_roundtrip"
path = "fuzz_targets/biguint_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "sighash"
path = "fuzz_targets/sighash.rs"
test = false
doc = false

[[bin]]
name = "validate_block_basic"
path = "fuzz_targets/validate_block_basic.rs"
test = false
doc = false

[[bin]]
name = "pow_check"
path = "fuzz_targets/pow_check.rs"
test = false
doc = false

[[bin]]
name = "compact_shortid"
path = "fuzz_targets/compact_shortid.rs"
test = false
doc = false

[[bin]]
name = "parse_htlc"
path = "fuzz_targets/parse_htlc.rs"
test = false
doc = false

[[bin]]
name = "parse_vault"
path = "fuzz_targets/parse_vault.rs"
test = false
doc = false

[[bin]]
name = "parse_multisig"
path = "fuzz_targets/parse_multisig.rs"
test = false
doc = false

[[bin]]
name = "fork_work"
path = "fuzz_targets/fork_work.rs"
test = false
doc = false

[[bin]]
name = "block_subsidy"
path = "fuzz_targets/block_subsidy.rs"
test = false
doc = false

[[bin]]
name = "covenant_genesis"
path = "fuzz_targets/covenant_genesis.rs"
test = false
doc = false

[[bin]]
name = "p2p_wire_message"
path = "fuzz_targets/p2p_wire_message.rs"
test = false
doc = false

[[bin]]
name = "p2p_version_payload"
path = "fuzz_targets/p2p_version_payload.rs"
test = false
doc = false

[[bin]]
name = "tx_relay_announce"
path = "fuzz_targets/tx_relay_announce.rs"
test = false
doc = false

[[bin]]
name = "tx_relay_receive"
path = "fuzz_targets/tx_relay_receive.rs"
test = false
doc = false

[[bin]]
name = "marshal_tx_roundtrip"
path = "fuzz_targets/marshal_tx_roundtrip.rs"
test = false
doc = false

[[bin]]
name = "validate_tx_local"
path = "fuzz_targets/validate_tx_local.rs"
test = false
doc = false

[[bin]]
name = "txcontext_bundle"
path = "fuzz_targets/txcontext_bundle.rs"
test = false
doc = false

[[bin]]
name = "spend_dispatch_structural"
path = "fuzz_targets/spend_dispatch_structural.rs"
test = false
doc = false

[[bin]]
name = "sig_verify_openssl"
path = "fuzz_targets/sig_verify_openssl.rs"
test = false
doc = false

[[bin]]
name = "sig_cache_structural"
path = "fuzz_targets/sig_cache_structural.rs"
test = false
doc = false

[[bin]]
name = "sig_cache_concurrent"
path = "fuzz_targets/sig_cache_concurrent.rs"
test = false
doc = false

[[bin]]
name = "suite_registry_surface"
path = "fuzz_targets/suite_registry_surface.rs"
test = false
doc = false

[[bin]]
name = "connect_block_inmem"
path = "fuzz_targets/connect_block_inmem.rs"
test = false
doc = false

[[bin]]
name = "connect_block_parallel_determinism"
path = "fuzz_targets/connect_block_parallel_determinism.rs"
test = false
doc = false

[[bin]]
name = "connect_block_parallel_worker_parity"
path = "fuzz_targets/connect_block_parallel_worker_parity.rs"
test = false
doc = false

[[bin]]
name = "da_chunk_hash_verify"
path = "fuzz_targets/da_chunk_hash_verify.rs"
test = false
doc = false

[[bin]]
name = "tx_dep_graph"
path = "fuzz_targets/tx_dep_graph.rs"
test = false
doc = false

[[bin]]
name = "da_payload_commit_verify"
path = "fuzz_targets/da_payload_commit_verify.rs"
test = false
doc = false
