[package]
name = "rubin-consensus"
version = "0.0.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
sha3 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
openssl-sys = "0.9"

[dev-dependencies]
criterion = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bench]]
name = "sig_cache"
harness = false

[[bench]]
name = "connect_block_parallel"
harness = false

[[bench]]
name = "combined_load"
harness = false
