[package]
name = "rubin-crypto"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
# Default features are intentionally empty.
# - `dev-std` is development-only tooling (non-FIPS, non-production).
# - production / CI should opt into `wolfcrypt-dylib` explicitly.
default = []
wolfcrypt = []
wolfcrypt-dylib = ["dep:libloading"]
dev-std = []

[dependencies]
sha3 = "0.10"
libloading = { version = "0.9", optional = true }
