[package]
name = "rubin-node"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
default = ["dev-std"]
dev-std = ["rubin-crypto/dev-std"]
wolfcrypt-dylib = ["rubin-crypto/wolfcrypt-dylib"]

[dependencies]
rubin-consensus = { path = "../rubin-consensus" }
rubin-crypto = { path = "../rubin-crypto" }
rubin-store = { path = "../rubin-store" }
aes = "0.8"
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
