[package]
name = "rubin-node"
version = "0.0.0"
edition = "2021"

[dependencies]
ctrlc = "3.5.2"
hex = "0.4"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"

rubin-consensus = { path = "../rubin-consensus" }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]
criterion = "0.5"
# RUB-176 / GitHub #1432: token-aware tx_relay canonical-admission boundary
# checker. Test-only AST parser used by tx_relay.rs's boundary checker module
# to walk the production AST and detect direct syntactic canonical TxPool
# admission call expressions while ignoring comments, string literals, raw
# strings, doc comments, and `#[cfg(test)]` items. Scoped to dev-dependencies
# so it never enters the production binary or the runtime dependency graph.
syn = { version = "2", features = ["full", "visit"] }

[[bench]]
name = "runtime_baseline"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[package.metadata.cargo-machete]
# RUB-234/RUB-225 intentionally stage cross-platform signal dependencies before
# platform-specific shutdown wiring consumes them.
ignored = ["ctrlc", "signal-hook"]
