[package]
name = "rubin-store"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
redb = "2"
rubin-consensus = { path = "../rubin-consensus" }
rubin-crypto = { path = "../rubin-crypto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
